--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ABM-CODING Portfolio</title>
+  <title>EDN-CODING Portfolio</title>
 
   <!--
     - favicon
@@ -25,7 +25,7 @@
 
   <!--
     - google font link
-  -->
+  -->  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -80,7 +80,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:abdulmalikakhzamov1@gmail.com" class="contact-link">najimoveldor7@gmail.com</a>
+              <a href="mailto:najimoveldor7@gmail.com" class="contact-link">najimoveldor7@gmail.com</a>
             </div>
 
           </li>
@@ -258,7 +258,7 @@
                 <h4 class="h4 service-item-title">Web development</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the junior level.
+                  High-quality development of websites at the junior level.
                 </p>
               </div>
 
@@ -526,7 +526,7 @@
               <span>2023 — Present</span>
 
               <p class="timeline-text">
-                Axon Logic
+                Unemployed
               </p>
 
             </li>
@@ -594,7 +594,20 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">JavaScript</h5>
+                <h5 class="h5">SCSS</h5>
+                <data value="65">65%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 65%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">BOOTSTRAP</h5>
                 <data value="50">50%</data>
               </div>
 
@@ -620,12 +633,40 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
+                <h5 class="h5">JavaScript</h5>
+                <data value="50">40%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 40%;"></div>
+              </div>
+
+            </li>
+
+
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
                 <h5 class="h5">VUE</h5>
                 <data value="40">40%</data>
               </div>
 
               <div class="skill-progress-bg">
                 <div class="skill-progress-fill" style="width: 40%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">ANGULAR</h5>
+                <data value="20">20%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 20%;"></div>
               </div>
 
             </li>
@@ -701,7 +742,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="https://eldor777.github.io/Viip/" target="_blank">
+              <a href="https://eldor777.github.io/weather-app/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -710,10 +751,10 @@
                     </ion-icon>
                   </div>
 
-                  <img src="./assets/images/filmlane.jpg" alt="Filmlane" loading="lazy">
+                  <img src="./img/weather-ap.jpg" alt="Filmlane" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Filmlane</h3>
+                <h3 class="project-title">Weather-App</h3>
 
                 <p class="project-category">Applications</p>
 
@@ -721,17 +762,35 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://malikwhite.github.io/Britlex/" target="_blank">
+              <a href="https://eldor777.github.io/Nike/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/britlex.jpg" alt="Britlex" loading="lazy">
+                  <img src="./img/nike.jpg" alt="Britlex" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Britlex</h3>
+                <h3 class="project-title">Nike</h3>
+
+                <p class="project-category">Layout</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://eldor777.github.io/Calculator/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./img/calculator.jpg" alt="Furniking" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Calculator</h3>
 
                 <p class="project-category">Web development</p>
 
@@ -739,24 +798,24 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://malikwhite.github.io/Furniking/" target="_blank">
+              <a href="https://eldor777.github.io/Adidas/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/furniking.jpg" alt="Furniking" loading="lazy">
+                  <img src="./img/Adidas.jpg" alt="Furniking" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Furniking</h3>
+                <h3 class="project-title">Adidas</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Layout</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <!-- <li class="project-item  active" data-filter-item data-category="applications">
               <a href="https://weather-app-af0f3.web.app" target="_blank">
 
                 <figure class="project-img">
@@ -772,7 +831,7 @@
                 <p class="project-category">Applications</p>
 
               </a>
-            </li>
+            </li> -->
 
           </ul>
 
@@ -796,9 +855,8 @@
 
         <section class="mapbox" data-mapbox>
           <figure>
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1496.901651867664!2d69.29400221312743!3d41.37835802594289!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2s!4v1667921991999!5m2!1sru!2s"
-              width="400" height="300" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d544.3188701729609!2d69.32399277195218!3d41.42890068284427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2s!4v1686475185639!5m2!1sru!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              
           </figure>
         </section>
 
@@ -839,7 +897,7 @@
   <!--
     - custom js link
   -->
-  <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+  <!-- <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>  -->
   <script src="./main.js"></script>
 
   <!--
@@ -848,7 +906,7 @@
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-  <script type="module">
+  <!-- <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.13.0/firebase-app.js";
     const firebaseConfig = {
       apiKey: "AIzaSyAWOioye5beOx3r--LD7hsMBpn-wme4_Ag",
@@ -859,7 +917,7 @@
       appId: "1:282878344620:web:37e8d80296e466a8bd4e09"
     };
     const app = initializeApp(firebaseConfig);
-  </script>
+  </script> -->
 
 </body>
 
